k8s/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  labels:
    app: fastapi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
      - name: api
        # USING YOUR CUSTOM IMAGE
        image: harshbhatt12/backend:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: ClusterIP
  ports:
  - port: 8000   # Service Port (Inter-cluster communication)
    targetPort: 80 # Container Port (Where Uvicorn is listening)
  selector:
    app: fastapi-backend
